replace with standard List impl